--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         // Build a system
   const ui = SwaggerUIBundle({
     urls: [
-      {url: "https://petstore.swagger.io/v2/swagger.json", name: "API One"},
+      {url: "service1/swagger.json", name: "API One"},
       {url: "https://petstore.swagger.io/v2/swagger.json", name: "API Two"},
     ],
 //    "urls.primaryName": "API Two",  // default document (if other than the first)
