--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         // Build a system
   const ui = SwaggerUIBundle({
     urls: [
-      {url: "service1/swagger.json", name: "API One"},
-      {url: "https://petstore.swagger.io/v2/swagger.json", name: "API Two"},
+      {url: "simple-pet-service/swagger.json", name: "Simple Pet Service"},
+      {url: "complex-pet-service/swagger.json", name: "Complex Pet Service"},
     ],
 //    "urls.primaryName": "API Two",  // default document (if other than the first)
     			dom_id: '#swagger-ui',
