--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
     <script src="dist/swagger-initializer.js" charset="UTF-8"> </script>
     <script>
-      window.onload = function() {
-        // Build a system
-  const ui = SwaggerUIBundle({
-    urls: [
-      {url: "simple-pet-service/swagger.json", name: "Simple Pet Service"},
-      {url: "complex-pet-service/swagger.json", name: "Complex Pet Service"},
-    ],
-//    "urls.primaryName": "API Two",  // default document (if other than the first)
-    			dom_id: '#swagger-ui',
-			deepLinking: true,
-			presets: [
-				SwaggerUIBundle.presets.apis,
-				SwaggerUIStandalonePreset
-			],
-			plugins: [
-				SwaggerUIBundle.plugins.DownloadUrl
-			],
-			layout: "StandaloneLayout"
-  })
-  		window.ui = ui
-      }
+	      window.onload = function() {
+		// Build a system
+	  const ui = SwaggerUIBundle({
+	    urls: [
+	      {url: "petstore-minimal/petstore-minimal.json", name: "Minimal Pet Service"},
+	      {url: "petstore-simple/petstore-simple.json", name: "Simple Pet Service"},
+	    ],
+	//    "urls.primaryName": "API Two",  // default document (if other than the first)
+		dom_id: '#swagger-ui',
+		deepLinking: true,
+		presets: [
+			SwaggerUIBundle.presets.apis,
+			SwaggerUIStandalonePreset
+		],
+		plugins: [
+		SwaggerUIBundle.plugins.DownloadUrl
+		],
+		layout: "StandaloneLayout"
+	  })
+	  window.ui = ui
+     }
     </script>
   </body>
 </html>
